feat: add toml, rework common gradle, creating two template modules.
- Added basic simple dependencies

- Added simple docker files

- Implemented template for test-fixtures and common utility functions.

- Created initial-scheme and db-changelog in mp module.